# TardigradeRenderEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  imgui.ini
src/: Camera.cpp  Camera.hpp  Controls.cpp  Controls.hpp  Cube.cpp  Cube.hpp  CubeMap.cpp  CubeMap.hpp  Group.cpp  Group.hpp  Line.cpp  Line.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  ObjLoader.cpp  ObjLoader.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  main.cpp  stb_image.cpp
src/ImGui/: imgui_impl_glfw.cpp
src/models/: earthobj.mtl  monkey.mtl
src/shaders/: fragment.shader  lineFragment.shader  lineVertex.shader  mtlShader.frag  mtlShader.vert  vertex.shader
